--- a/frontend-cemos/src/app/pages/login/login.component.html
+++ b/frontend-cemos/src/app/pages/login/login.component.html
@@ -78,6 +78,12 @@
               refresh
             </mat-icon>
           </button>
+          <p class="forgot-password-link">
+            <a [href]="passwordResetUrl">Esqueci minha senha</a>
+          </p>
+          <p class="forgot-password-link">
+            <a [href]="registerUrl">Criar novo usuário</a>
+          </p>
         </form>
       </mat-card-content>
       
